--- a/CustomsExternal/CustomsExternal.csproj
+++ b/CustomsExternal/CustomsExternal.csproj
@@ -660,6 +660,7 @@
     <Content Include="Scripts\jquery-3.7.0.slim.js" />
     <Content Include="Scripts\jquery-3.7.0.slim.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Templates\HtmlEmailAnswerPage.html" />
     <Content Include="Templates\HtmlEmailPage.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
